--- a/src/main/resources/eu/hansolo/applefx/apple.css
+++ b/src/main/resources/eu/hansolo/applefx/apple.css
@@ -255,6 +255,7 @@
 }
 
 
+/* Ios RoundToggleButton */
 .ios-round-toggle-button,
 .ios-round-toggle-button:focused {
     -selected-color      : -BLUE-AQUA;
@@ -288,6 +289,7 @@
 }
 
 
+/* IosSegmentedButton */
 .ios-segmented-button-bar {
     -control-color: -BLUE-AQUA;
 }
@@ -333,6 +335,7 @@
 }
 
 
+/* IosSlider */
 .ios-slider {
     -thumb-fill         : white;
     -track-fill         : rgba(0, 0, 0, 0.1);
@@ -411,6 +414,7 @@
 }
 
 
+/* IosSwitch */
 .ios-switch {
     -background-color : rgb(229, 229, 229);
     -dark-main-color  : rgb(0, 0, 0);
@@ -433,6 +437,7 @@
 .ios-switch .knob {
     -fx-fill: -knob-color;
 }
+
 .ios-switch:dark .background-area {
     -fx-fill: -background-color;
 }
@@ -451,6 +456,7 @@
 }
 
 
+/* Button */
 .macos-button {
     -fx-font-family            : 'SF Pro';
     -selection-color           : -BLUE-AQUA;
@@ -487,6 +493,7 @@
     -fx-background-color: -light-disabled-color;
     -fx-text-fill       : -light-disabled-text-color;
 }
+
 .macos-button:dark {
     -fx-pref-height      : 15;
     -fx-background-color : -dark-control-background;
@@ -499,7 +506,7 @@
     -fx-font-family      : 'SF Pro';
     -fx-font-size        : 12px;
 }
-.macos-button:armed {
+.macos-button:dark:armed {
     -fx-pref-height      : 16;
     -fx-background-color : -selection-color;
     -fx-background-insets: 0 0 -1 0, 0, 1, 2;
@@ -515,6 +522,7 @@
 }
 
 
+/* Switch */
 .macos-switch {
     -selected-color: -BLUE-AQUA;
     -knob-color    : -WHITE;
@@ -532,6 +540,7 @@
 .macos-switch .knob {
     -fx-fill: -knob-color;
 }
+
 .macos-switch:dark .background-area {
     -fx-fill: -DARK-CTRL-BACKGROUND;
 }
@@ -547,6 +556,7 @@
 }
 
 
+/* Slider */
 .macos-slider {
     -thumb-fill         : -GRAY-AQUA;
     -track-fill         : rgba(0, 0, 0, 0.1);
@@ -642,6 +652,7 @@
 }
 
 
+/* TextField */
 .macos-text-field {
     -fx-control-inner-background: white;
     -fx-text-fill               : black;
@@ -691,6 +702,89 @@
 }
 
 
+/* CheckBox */
+.macos-check-box {
+    -selection-color     : -BLUE-AQUA;
+    -selection-color-dark: -BLUE-DARK;
+    -fx-label-padding    : 0 0 0 5;
+    -fx-text-fill        : black;
+}
+.macos-check-box > .box {
+    -fx-border-insets    : 0;
+    -fx-border-width     : 1;
+    -fx-border-style     : solid;
+    -fx-border-radius    : 3;
+    -fx-border-color     : -GRAY-AQUA;
+    -fx-background-radius: 3;
+    -fx-background-color : transparent;
+    -fx-padding          : 1 1 2 2;
+}
+.macos-check-box > .box > .mark {
+    -fx-background-color: null;
+    -fx-padding         : 5 5 6 6;
+    -fx-shape           : "M-0.25,6.083c0.843-0.758,4.583,4.833,5.75,4.833S14.5-1.5,15.917-0.917c1.292,0.532-8.75,17.083-10.5,17.083C3,16.167-1.083,6.833-0.25,6.083z";
+}
+.macos-check-box:selected > .box {
+    -fx-border-color    : transparent;
+    -fx-background-color: -selection-color;
+}
+.macos-check-box:selected > .box > .mark {
+    -fx-background-color: white;
+    -fx-padding         : 5 5 5 5;
+    -fx-shape           : "M23.895,35.297L31.077,24.09C31.818,22.935 33.357,22.598 34.512,23.338C35.668,24.079 36.005,25.618 35.264,26.773L26.297,40.767C25.8,41.542 24.944,41.949 24.085,41.909C23.383,41.902 22.689,41.6 22.203,41.02L16.809,34.583C15.927,33.532 16.066,31.962 17.118,31.081C18.169,30.199 19.739,30.337 20.62,31.389L23.895,35.297Z";
+}
+.macos-check-box:indeterminate > .box {
+    -fx-border-color    : transparent;
+    -fx-background-color: -selection-color;
+}
+.macos-check-box:indeterminate  > .box > .mark {
+    -fx-background-color: white;
+    -fx-shape           : "M0,-0.5H7V1.5H0Z";
+    -fx-scale-shape     : false;
+    -fx-padding         : 5 5 5 5;
+}
+
+.macos-check-box:dark {
+    -fx-label-padding: 0 0 0 5;
+    -fx-text-fill    : white;
+}
+.macos-check-box:dark > .box {
+    -fx-border-insets    : 0;
+    -fx-border-width     : 1;
+    -fx-border-style     : solid;
+    -fx-border-radius    : 3;
+    -fx-border-color     : -GRAY-DARK;
+    -fx-background-radius: 3;
+    -fx-background-color : transparent;
+    -fx-padding          : 1 1 2 2;
+}
+.macos-check-box:dark > .box > .mark {
+    -fx-background-color: null;
+    -fx-padding         : 5 5 5 5;
+    -fx-shape           : "M-0.25,6.083c0.843-0.758,4.583,4.833,5.75,4.833S14.5-1.5,15.917-0.917c1.292,0.532-8.75,17.083-10.5,17.083C3,16.167-1.083,6.833-0.25,6.083z";
+}
+.macos-check-box:dark:selected > .box {
+    -fx-border-color    : transparent;
+    -fx-background-color: -selection-color-dark;
+}
+.macos-check-box:dark:selected > .box > .mark {
+    -fx-background-color: white;
+    -fx-padding         : 5 5 5 5;
+    -fx-shape           : "M23.895,35.297L31.077,24.09C31.818,22.935 33.357,22.598 34.512,23.338C35.668,24.079 36.005,25.618 35.264,26.773L26.297,40.767C25.8,41.542 24.944,41.949 24.085,41.909C23.383,41.902 22.689,41.6 22.203,41.02L16.809,34.583C15.927,33.532 16.066,31.962 17.118,31.081C18.169,30.199 19.739,30.337 20.62,31.389L23.895,35.297Z";
+}
+.macos-check-box:dark:indeterminate > .box {
+    -fx-border-color    : transparent;
+    -fx-background-color: -selection-color-dark;
+}
+.macos-check-box:dark:indeterminate  > .box > .mark {
+    -fx-background-color: white;
+    -fx-shape           : "M0,-0.5H7V1.5H0Z";
+    -fx-scale-shape     : false;
+    -fx-padding         : 5 5 5 5;
+}
+
+
+/* Separator */
 .macos-separator:horizontal .line {
     -fx-border-color : rgb(216, 216, 216) transparent transparent transparent, rgb(216, 216, 216) transparent transparent transparent;
     -fx-border-insets: 0, 1 0 0 0;
@@ -712,6 +806,7 @@
 }
 
 
+/* ScrollBar */
 .scroll-bar:horizontal {
     -fx-background-color : transparent;
     -fx-background-insets: 0;
@@ -792,6 +887,7 @@
 }
 
 
+/* ScrollPane */
 .macos-scroll-pane {
     -fx-background-color : transparent;
     -fx-background-insets: 0;
