--- a/src/main/resources/eu/hansolo/applefx/apple.css
+++ b/src/main/resources/eu/hansolo/applefx/apple.css
@@ -90,6 +90,9 @@
     -DARK-BACKGROUND                  : rgb(31, 28, 29);
     -DARK-CTRL-BACKGROUND             : rgb(61, 59, 61);
 
+    -check-mark-empty                 : url("./macos-checkmark-empty.png");
+    -check-mark-white                 : url("./macos-checkmark-white.png");
+    -check-mark-black                 : url("./macos-checkmark-black.png");
 
     /* VARIABLE DEFINITIONS */
     -accent-color                 : -BLUE-AQUA;
@@ -602,47 +605,53 @@
     -thumb-color         : -WHITE;
     -thumb-border-color  : -LIGHT-CTRL-BACKGROUND;
     -track-fill          : rgba(0, 0, 0, 0.1);
-    -track-progress-fill : -RED-AQUA;
+    -tick-fill           : rgba(0, 0, 0, 0.15);
+    -track-progress-fill : -accent-color;
     -border-color        : rgba(0, 0, 0, 0.05);
+}
+.macos-slider:window-focus-lost {
+    -track-progress-fill: rgb(216, 216, 216);
 }
 .macos-slider .track {
     -fx-background-color : -track-fill;
     -fx-background-insets: 0;
-    -fx-background-radius: 1 1 1 1;
     -fx-border-width     : 1 0 1 0;
     -fx-border-style     : solid none solid none;
     -fx-border-color     : -border-color;
     -fx-padding          : 0.5px;
-    -fx-min-height       : 2.5px;
-    -fx-max-height       : 2.5px;
-    -fx-pref-height      : 2.5px;
+    -fx-min-height       : 4px;
+    -fx-max-height       : 4px;
+    -fx-pref-height      : 4px;
+    -fx-background-radius: 5;
 }
 .macos-slider:vertical .track {
-    -fx-background-color: -track-fill;
-    -fx-border-width    : 0 1 0 1;
-    -fx-border-style    : none solid none solid;
-    -fx-border-color    : -border-color;
-    -fx-min-width       : 2.5px;
-    -fx-max-width       : 2.5px;
-    -fx-pref-width      : 2.5px;
+    -fx-background-color : -track-fill;
+    -fx-border-width     : 0 1 0 1;
+    -fx-border-style     : none solid none solid;
+    -fx-border-color     : -border-color;
+    -fx-min-width        : 4px;
+    -fx-max-width        : 4px;
+    -fx-pref-width       : 4px;
+    -fx-background-radius: 5;
 }
 .macos-slider:balance .track {
     -fx-background-color : -track-fill;
     -fx-background-insets: 0;
-    -fx-background-radius: 1 1 1 1;
+    -fx-background-radius: 4px;
     -fx-padding          : 0.5px;
     -fx-border-color     : transparent -track-fill transparent -track-fill;
     -fx-border-width     : 1;
     -fx-border-insets    : -3 0 -3 0;
 }
 .macos-slider:balance:vertical .track {
-    -fx-background-color: -track-fill;
-    -fx-border-color    : transparent -track-fill transparent -track-fill;
-    -fx-border-width    : 1;
-    -fx-border-insets   : 0 -3 0 -3;
+    -fx-background-color : -track-fill;
+    -fx-background-radius: 4px;
+    -fx-border-color     : transparent -track-fill transparent -track-fill;
+    -fx-border-width     : 1;
+    -fx-border-insets    : 0 -3 0 -3;
 }
 .macos-slider .center-line {
-    -fx-stroke    : transparent;
+    -fx-stroke      : transparent;
     -fx-stroke-width: 1px;
 }
 .macos-slider:balance .center-line,
@@ -654,6 +663,7 @@
     -fx-background-insets: 0;
     -fx-background-radius: 1 1 1 1;
     -fx-padding          : 0.5px;
+    -fx-background-radius: 5;
 }
 .macos-slider:vertical .track-progress {
     -fx-background-color: -track-progress-fill;
@@ -662,41 +672,59 @@
     -fx-tick-label-fill  : -track-fill;
     -fx-tick-length      : 8px;
     -fx-minor-tick-length: 8px;
-    -fx-border-color     : -border-color;
+    -fx-border-color     : transparent;
 }
 .macos-slider .axis .axis-tick-mark,
 .macos-slider .axis .axis-minor-tick-mark {
     -fx-fill        : null;
-    -fx-stroke      : -track-fill;
+    -fx-stroke      : -tick-fill;
     -fx-stroke-width: 2;
 }
 .macos-slider .thumb,
 .macos-slider .thumb:hover,
-.macos-slider:focused .thumb,
-.macos-slider:pressed .thumb {
+.macos-slider:focused .thumb {
     -fx-padding          : 14px;
-    -fx-background-insets: -1 -1 -1 -1, 0 0 0 0;
+    -fx-background-insets: 0, 0.5;
     -fx-background-color : -thumb-border-color, -thumb-color;
-    -fx-background-radius: 14px;
-    -fx-effect           : none; /*dropshadow(two-pass-box, rgba(0, 0, 0, 0.25), 5, 0.0, 0, 2);*/
+    -fx-background-radius: 20px;
+    -fx-effect           : dropshadow(two-pass-box, rgba(0, 0, 0, 0.15), 1, 0.0, 0, 1);
+}
+.macos-slider:pressed .thumb,
+.macos-slider:focused:pressed .thumb {
+    -fx-padding          : 14px;
+    -fx-background-insets: 0, 0.5;
+    -fx-background-color : -thumb-border-color, derive(-thumb-color, -10%);
+    -fx-background-radius: 20px;
+    -fx-effect           : dropshadow(two-pass-box, rgba(0, 0, 0, 0.15), 1, 0.0, 0, 1)
 }
 
 .macos-slider:dark {
     -thumb-color        : -GRAY-DARK;
     -thumb-border-color : -GRAY-DARK;
     -track-fill         : rgba(255, 255, 255, 0.1);
-    -track-progress-fill: -RED-DARK;
+    -tick-fill          : rgba(255, 255, 255, 0.15);
+    -track-progress-fill: -accent-color;
     -border-color       : rgba(255, 255, 255, 0.05);
+}
+.macos-slider:dark:window-focus-lost {
+    -track-progress-fill: rgb(106, 105, 104);
 }
 .macos-slider:dark .thumb,
 .macos-slider:dark .thumb:hover,
-.macos-slider:dark:focused .thumb,
-.macos-slider:dark:pressed .thumb {
+.macos-slider:dark:focused .thumb {
     -fx-padding          : 14px;
-    -fx-background-insets: 0, 1;
+    -fx-background-insets: 0, 0.5;
     -fx-background-color : -thumb-border-color, -thumb-color;
-    -fx-background-radius: 14px;
-    -fx-effect           : none; /*dropshadow(two-pass-box, rgba(0, 0, 0, 0.25), 5, 0.0, 0, 2);*/
+    -fx-background-radius: 20px;
+    -fx-effect           : none;
+}
+.macos-slider:dark:pressed .thumb,
+.macos-slider:dark:focused:pressed .thumb {
+    -fx-padding          : 14px;
+    -fx-background-insets: 0, 0.5;
+    -fx-background-color : -thumb-border-color, derive(-thumb-color, 20%);
+    -fx-background-radius: 20px;
+    -fx-effect           : none;
 }
 
 
@@ -763,9 +791,9 @@
     -fx-border-width     : 1;
     -fx-border-style     : solid;
     -fx-border-radius    : 3;
-    -fx-border-color     : -GRAY-AQUA;
+    -fx-border-color     : rgb(206, 206, 206);
     -fx-background-radius: 3;
-    -fx-background-color : transparent;
+    -fx-background-color : white;
     -fx-padding          : 2 2 3 3;
 }
 .macos-check-box > .box > .mark {
@@ -777,10 +805,17 @@
     -fx-border-color    : transparent;
     -fx-background-color: -box-fill;
 }
+.macos-check-box:selected:window-focus-lost > .box {
+    -fx-border-color    : rgb(206, 206, 206);
+    -fx-background-color: white;
+}
 .macos-check-box:selected > .box > .mark {
     -fx-background-color: -TEXT-SELECTED-AQUA;
     -fx-padding         : 4 4 4 4;
     -fx-shape           : "M23.895,35.297L31.077,24.09C31.818,22.935 33.357,22.598 34.512,23.338C35.668,24.079 36.005,25.618 35.264,26.773L26.297,40.767C25.8,41.542 24.944,41.949 24.085,41.909C23.383,41.902 22.689,41.6 22.203,41.02L16.809,34.583C15.927,33.532 16.066,31.962 17.118,31.081C18.169,30.199 19.739,30.337 20.62,31.389L23.895,35.297Z";
+}
+.macos-check-box:selected:window-focus-lost > .box > .mark {
+    -fx-background-color: black;
 }
 .macos-check-box:indeterminate > .box {
     -fx-border-color    : transparent;
@@ -811,18 +846,37 @@
     linear-gradient(to bottom, rgb(82, 76, 76) 0%, rgb(109, 105, 105) 100%);
     -fx-padding          : 2 2 3 3;
 }
+.macos-check-box:dark:pressed > .box {
+    -fx-border-insets    : 0;
+    -fx-border-width     : 0;
+    -fx-border-style     : none;
+    -fx-border-radius    : 3;
+    -fx-border-color     : transparent;
+    -fx-background-insets: 0, 1;
+    -fx-background-radius: 3, 3;
+    -fx-background-color : linear-gradient(to bottom, derive(rgb(103, 99, 99), 20%) 0%, derive(rgb(57, 51, 52), 20%) 3%, derive(rgb(57, 51, 52), 20%) 97%, derive(rgb(111, 106, 107), 20%) 100%),
+    linear-gradient(to bottom, derive(rgb(82, 76, 76), 20%) 0%, derive(rgb(109, 105, 105), 20%) 100%);
+    -fx-padding          : 2 2 3 3;
+}
 .macos-check-box:dark > .box > .mark {
     -fx-background-color: null;
     -fx-padding         : 5 5 5 5;
     -fx-shape           : "M-0.25,6.083c0.843-0.758,4.583,4.833,5.75,4.833S14.5-1.5,15.917-0.917c1.292,0.532-8.75,17.083-10.5,17.083C3,16.167-1.083,6.833-0.25,6.083z";
 }
 .macos-check-box:dark:selected > .box {
-    -fx-background-color: linear-gradient(to bottom, rgb(103, 99, 99) 0%, rgb(57, 51, 52) 3%, rgb(57, 51, 52) 97%, rgb(111, 106, 107) 100%),
-    linear-gradient(to bottom, rgb(82, 76, 76) 0%, rgb(109, 105, 105) 100%);
+    /*-fx-background-color: linear-gradient(to bottom, rgb(103, 99, 99) 0%, rgb(57, 51, 52) 3%, rgb(57, 51, 52) 97%, rgb(111, 106, 107) 100%), linear-gradient(to bottom, rgb(82, 76, 76) 0%, rgb(109, 105, 105) 100%);*/
+    -fx-background-color: -box-fill;
+    -fx-padding         : 3 3 4 4;
+}
+.macos-check-box:dark:selected:window-focus-lost > .box {
+    -fx-background-color: linear-gradient(to bottom, rgb(103, 99, 99) 0%, rgb(57, 51, 52) 3%, rgb(57, 51, 52) 97%, rgb(111, 106, 107) 100%), linear-gradient(to bottom, rgb(82, 76, 76) 0%, rgb(109, 105, 105) 100%);
     -fx-padding         : 3 3 4 4;
 }
 .macos-check-box:dark:selected:focused > .box {
     -fx-background-color: -box-fill;
+}
+.macos-check-box:dark:selected:focused:window-focus-lost > .box {
+    -fx-background-color: transparent;
 }
 .macos-check-box:dark:selected > .box > .mark {
     -fx-background-insets: 0, 0;
@@ -876,8 +930,15 @@
 .macos-radio-button:selected > .radio {
     -fx-background-color: -dot-fill;
 }
+.macos-radio-button:selected:window-focus-lost > .radio {
+    -fx-background-color: rgb(206, 206, 206), white;
+}
 .macos-radio-button:selected > .radio > .dot {
     -fx-background-color : -TEXT-SELECTED-AQUA;
+    -fx-background-insets: 0;
+}
+.macos-radio-button:selected:window-focus-lost > .radio > .dot {
+    -fx-background-color : black;
     -fx-background-insets: 0;
 }
 
@@ -909,6 +970,9 @@
 }
 .macos-radio-button:dark:selected > .radio {
     -fx-background-color: -dot-fill;
+}
+.macos-radio-button:dark:selected:window-focus-lost > .radio {
+    -fx-background-color: rgb(94, 91, 90), linear-gradient(to bottom, rgb(72, 70, 70) 0%, rgb(101, 100, 99) 100%);
 }
 .macos-radio-button:dark:selected > .radio > .dot {
     -fx-background-color : -TEXT-SELECTED-AQUA;
@@ -1264,10 +1328,10 @@
     -fx-font-family: 'SF Pro Display Bold';
     -fx-font-size  : 1em;
 }
-.macos-header:focus-lost {
+.macos-header:window-focus-lost {
     -fx-background-color : rgb(229, 229, 229), rgb(197, 197, 197), rgb(243, 242, 242), rgb(231, 230, 230);
 }
-.macos-header:focus-lost .macos-label {
+.macos-header:window-focus-lost .macos-label {
     -fx-font-family: 'SF Pro Display Bold';
     -fx-font-size  : 1em;
     -fx-text-fill  : rgb(166, 164, 164);
@@ -1275,10 +1339,10 @@
 .macos-header:dark {
     -fx-background-color: rgb(2, 2, 2), rgb(108, 105, 106), rgb(122, 121, 121), -HEADER-BACKGROUND-DARK;
 }
-.macos-header:dark:focus-lost {
+.macos-header:dark:window-focus-lost {
     -fx-background-color: rgb(2, 2, 2), rgb(108, 105, 106), rgb(122, 121, 121), rgb(40, 37, 37);
 }
-.macos-header:dark:focus-lost .macos-label {
+.macos-header:dark:window-focus-lost .macos-label {
     -fx-text-fill: rgb(103, 100, 100);
 }
 
@@ -1290,4 +1354,220 @@
 }
 .macos-content-pane:dark {
     -fx-background-color: rgb(76, 77, 78), rgb(32, 28, 28);
+}
+
+
+/* ComboBox */
+.combo-box-base,
+.combo-box-base:focused {
+    -fx-background-color : linear-gradient(to bottom, #cac7c7, #b3b0b0), white;
+    -fx-background-insets: 0, 0.5;
+    -fx-background-radius: 5, 5;
+    -fx-padding          : 0.166666em 0.166666em 0.166666em 0.666666em;
+    -fx-text-fill        : -text-color;
+    -fx-alignment        : CENTER;
+    -fx-content-display  : LEFT;
+    -fx-min-height       : 20px;
+    -fx-max-height       : 20px;
+    -fx-pref-height      : 20px;
+}
+.combo-box-base > .arrow-button,
+.combo-box-base:focused > .arrow-button,
+.combo-box-base:showing > .arrow-button {
+    -fx-background-color : linear-gradient(to bottom, derive(-accent-color, 15%), derive(-accent-color, -15%)), -accent-color;
+    -fx-background-insets: 0, 0.5;
+    -fx-background-radius: 4, 4;
+    -fx-border-radius    : 4, 4;
+    -fx-padding          : 1 4.5 1 4.5;
+    -fx-min-width        : 16;
+    -fx-max-width        : 16;
+    -fx-pref-width       : 16;
+    -fx-min-height       : 16;
+    -fx-max-height       : 16;
+    -fx-pref-height      : 16;
+    -fx-effect           : dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0, 0, 1);
+}
+.combo-box-base:window-focus-lost > .arrow-button {
+    -fx-background-color : transparent, transparent;
+    -fx-background-insets: 0, 0.5;
+    -fx-background-radius: 4, 4;
+    -fx-border-radius    : 4, 4;
+    -fx-padding          : 1 4.5 1 4.5;
+    -fx-min-width        : 16;
+    -fx-max-width        : 16;
+    -fx-pref-width       : 16;
+    -fx-min-height       : 16;
+    -fx-max-height       : 16;
+    -fx-pref-height      : 16;
+    -fx-effect           : none;
+}
+.combo-box-base > .arrow-button > .arrow {
+    -fx-background-insets: -0.5, 1.25;
+    -fx-background-color : white, -accent-color;
+    -fx-padding          : 4.95 3.075 4.95 3.075;
+    -fx-shape            : "M 5 6.5 L 8 3.15 L 11 6.5 z M 11 9.65 L 8 13 5 9.65 z";
+}
+.combo-box-base:window-focus-lost > .arrow-button > .arrow {
+    -fx-background-insets: -0.5, 1.25;
+    -fx-background-color : black, white;
+}
+.combo-box-base:disabled {
+    -fx-opacity: 1.0;
+}
+.combo-box-base > .text-field:disabled,
+.combo-box-base > .arrow-button:disabled,
+.combo-box-base > .list-cell:disabled {
+    -fx-opacity: 0.5;
+}
+
+.combo-box > .list-cell {
+    -fx-font-family : 'SF Pro';
+    -fx-font-size   : 13;
+    -fx-text-fill   : -text-color;
+    -fx-border-style: none;
+    -fx-border-color: transparent;
+    -fx-padding     : 0;
+}
+.combo-box .macos-combo-box-cell {
+    -fx-font-family : 'SF Pro';
+    -fx-font-size   : 13;
+    -fx-text-fill   : -text-color;
+}
+
+.macos-combo-box-cell,
+.macos-combo-box-cell:odd,
+.macos-combo-box-cell:even {
+    -fx-background-color: derive(rgb(237, 236, 236), -5%);
+    -fx-text-fill       : -text-color;
+    -fx-border-style    : none;
+    -fx-border-color    : transparent;
+}
+
+.combo-box-popup > .list-view {
+    -fx-background-color : -HEADER-BACKGROUND-DARK;
+    -fx-padding          : 1px;
+    -fx-background-insets: 0;
+    -fx-background-radius: 5;
+    -fx-border-radius    : 5;
+    -fx-border-insets    : -1;
+    -fx-border-color     : #585858;
+    -fx-effect           : dropshadow(gaussian, rgba(0,0,0,0.2), 8, 0, 0, 8);
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell {
+    -fx-background-color: derive(rgb(237, 236, 236), -5%);
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:filled:hover {
+    -fx-background-color : derive(rgb(237, 236, 236), -5%), -accent-color;
+    -fx-background-insets: 0, 2;
+    -fx-background-radius: 0, 4;
+    -fx-text-fill        : -text-color;
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:filled:selected {
+    -fx-background-color : derive(rgb(237, 236, 236), -5%);
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:filled:selected:hover {
+    -fx-background-color : -accent-color;
+    -fx-background-color : derive(rgb(237, 236, 236), -5%), -accent-color;
+    -fx-background-insets: 0, 2;
+    -fx-background-radius: 0, 4;
+}
+
+
+.combo-box-base:dark,
+.combo-box-base:dark:focused {
+    -fx-background-color : linear-gradient(to bottom, derive(rgb(101, 101, 101), 15%), derive(rgb(101, 101, 101),-15%)), rgb(101, 101, 101);
+    -fx-background-insets: 0, 0.5;
+    -fx-background-radius: 5, 5;
+    -fx-padding          : 0.166666em 0.166666em 0.166666em 0.666666em;
+    -fx-text-fill        : -text-color;
+    -fx-alignment        : CENTER;
+    -fx-content-display  : LEFT;
+    -fx-min-height       : 20px;
+    -fx-max-height       : 20px;
+    -fx-pref-height      : 20px;
+}
+.combo-box-base:dark > .arrow-button,
+.combo-box-base:dark:focused > .arrow-button,
+.combo-box-base:dark:showing > .arrow-button {
+    -fx-background-color : linear-gradient(to bottom, derive(-accent-color-dark, 20%), derive(-accent-color-dark, -20%)), -accent-color-dark;
+    -fx-background-insets: 0, 0.5;
+    -fx-background-radius: 4, 4;
+    -fx-border-radius    : 4, 4;
+    -fx-padding          : 1 4.5 1 4.5;
+    -fx-min-width        : 16;
+    -fx-max-width        : 16;
+    -fx-pref-width       : 16;
+    -fx-min-height       : 16;
+    -fx-max-height       : 16;
+    -fx-pref-height      : 16;
+    -fx-effect           : dropshadow(gaussian, rgba(0,0,0,0.2), 4, 0, 0, 1);
+}
+.combo-box-base:dark:window-focus-lost > .arrow-button {
+    -fx-background-color : transparent;
+    -fx-background-insets: 0;
+    -fx-background-radius: 3;
+    -fx-border-radius    : 3;
+    -fx-padding          : 1 4.5 1 4.5;
+    -fx-min-width        : 16;
+    -fx-max-width        : 16;
+    -fx-pref-width       : 16;
+    -fx-min-height       : 16;
+    -fx-max-height       : 16;
+    -fx-pref-height      : 16;
+}
+.combo-box-base:dark > .arrow-button > .arrow,
+.combo-box-base:dark:focused > .arrow-button > .arrow,
+.combo-box-base:dark:showing > .arrow-button > .arrow {
+    -fx-background-insets: -0.5, 1.25;
+    -fx-background-color : white, -accent-color-dark;
+    -fx-padding          : 4.95 3.075 4.95 3.075;
+    -fx-shape            : "M 5 6.5 L 8 3.15 L 11 6.5 z M 11 9.65 L 8 13 5 9.65 z";
+}
+.combo-box-base:dark:disabled {
+    -fx-opacity: 1.0;
+}
+.combo-box-base:dark > .text-field:disabled,
+.combo-box-base:dark > .arrow-button:disabled,
+.combo-box-base:dark > .list-cell:disabled {
+    -fx-opacity: 0.5;
+}
+
+.combo-box:dark > .list-cell {
+    -fx-font-family: 'SF Pro';
+    -fx-font-size  : 13;
+    -fx-text-fill  : -text-color-dark;
+    -fx-padding    : 0;
+}
+.combo-box:dark .macos-combo-box-cell:dark {
+    -fx-font-family: 'SF Pro';
+    -fx-font-size  : 13;
+    -fx-text-fill  : -text-color-dark;
+}
+
+.macos-combo-box-cell:dark,
+.macos-combo-box-cell:dark:odd,
+.macos-combo-box-cell:dark:even {
+    -fx-background-color: -HEADER-BACKGROUND-DARK;
+    -fx-text-fill       : -text-color-dark;
+    -fx-border-style    : none;
+    -fx-border-color    : transparent;
+}
+
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:dark {
+    -fx-background-color: -HEADER-BACKGROUND-DARK;
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:dark:filled:hover {
+    -fx-background-color : -HEADER-BACKGROUND-DARK, -accent-color-dark;
+    -fx-background-insets: 0, 2;
+    -fx-background-radius: 0, 4;
+    -fx-text-fill        : -text-color-dark;
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:dark:filled:selected {
+    -fx-background-color : -HEADER-BACKGROUND-DARK;
+}
+.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .macos-combo-box-cell:dark:filled:selected:hover {
+    -fx-background-color : -accent-color-dark;
+    -fx-background-color : -HEADER-BACKGROUND-DARK, -accent-color-dark;
+    -fx-background-insets: 0, 2;
+    -fx-background-radius: 0, 4;
 }
